# STTID

./: LICENSE  README.md  build.sh  run.sh
Cpp/: CMakeLists.txt
Cpp/densett/: CMakeLists.txt  decomposition.cpp  dense_test.cpp  dense_test_4d.cpp  tensortrain.cpp
Cpp/include/: core.h  cutil.h  dtensor.h  gpu_kernel.h  mkl_kernel.h  spfunctions.h  spmatrix.h  sptensor.h  structures.h  util.h
Cpp/src/densett/: interpolative.cpp  tensortrain.cpp
Cpp/src/largesize/: spinterpolative_l1_largesize.cpp  spinterpolative_l3_largesize.cpp  spinterpolative_l3g_largesize.cu  sptensortrain_largesize.cpp  trsv_kernel_largesize.cpp
Cpp/src/sparsett/: decomp_kernel.cu  dense_decomp_kernel.cu  spinterpolative_l1.cpp  spinterpolative_l3.cpp  spinterpolative_l3_largesize.cpp  spinterpolative_l3g.cu  spinterpolative_l3g_largesize.cu  sptensortrain.cpp
Cpp/src/synthetic_test/: dense_test.cpp  sparse_test_dim4.cpp  sparse_test_dim5.cpp
Cpp/src/unit_test/: unit_test_3.cpp  unit_test_4.cpp
Cpp/sttid/largesize/: trsv_kernel_largesize.cpp
Cpp/sttid/mkl_kernel/: trsv_kernel.cpp
Cpp/sttid/util/: timer.cpp
Cpp/ttid/: dense_recon_4d.cpp
Cpp/unit_test/: unit_test_1.cpp  unit_test_5.cpp
Data/: datagen_random.py  map_test_wp5_1based.py
Data/frostt_tensor/: readme.md
Data/kgraph_tensor/: KG_JF17K_3_ids_1based.tns  KG_JF17K_4_ids_1based.tns  KG_WikiPeople_3_ids_1based.tns  KG_WikiPeople_4_ids_1based.tns
Data/random_tensor/: Rnd1.tns  Rnd2.tns  Rnd3.tns  Rnd4.tns  Rnd5.tns  Rnd6.tns
Py/: datagen_syn.py  interpolation.py  interpolative_decomposition.py  random_tensor.py  rank_revealing.py  requirements.txt  test.py  test_matrix.py  test_quality.py  test_tensor.py  tt_cross.py  tt_cross_lu.py  tt_cross_qr.py  tt_id.py  tt_rounding.py  tt_svd.py  utils.py
src/: CMakeLists.txt
src/cmake/: CPM.cmake
src/include/: densett.h  dfunctions.h  mkl_kernel.h  spmatrix.h  spmatrix_device.h  sptensor.h  util.h
src/sttid/cusp_kernel/: cusparse_kernel.cu
src/sttid/largesize/: spinterpolative_l2_largesize.cpp  spinterpolative_l3_largesize.cpp  sptensortrain_largesize.cpp
src/sttid/mkl_kernel/: dense_kernel.cpp
src/sttid/sparsett/: spinterpolative_l2.cpp  spinterpolative_l3g.cu  sptensortrain.cpp
src/sttid/synthetic_test/: sparse_test_dim4.cpp  sparse_test_dim5.cpp
src/ttid/: CMakeLists.txt  decomposition.cpp  dense_recon_4dim.cpp  dense_test_5d.cpp  interpolative.cpp  subroutines.cpp
src/unit_test/: CMakeLists.txt  unit_test_2.cpp  unit_test_6.cpp
